# aoc_scaffold_rust

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/commands/: complete.rs  config.rs  mod.rs  run_tests.rs
src/commands/next_day/: mod.rs  src_scaff.rs
