[package]
name = "aoc_scaff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
confy = "0.5.1"
edit = "0.1.4"
serde = { version = "1.0.151", features = ["derive"] }
