[package]
name = "aoc_scaffold_rust"
version = "0.1.1"
edition = "2021"
authors = ["Ammar Abou Zor"]
description = "Cli tool to scaffold source code for advnent of solutions in rust programming language in rust programming language in rust programming language. It can also call unit tests for the current day"

[[bin]]
name = "aoc_scaffold"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.1.1"
confy = "0.5.1"
edit = "0.1.4"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = { version = "1.0.151", features = ["derive"] }
