[package]
name = "aoc_scaffold_rust"
version = "0.1.1"
edition = "2021"
authors = ["Ammar Abou Zor"]
description = "Cli tool to scaffold source code for advnent of solutions in rust programming language in rust programming language in rust programming language. It can also call unit tests for the current day"

[[bin]]
name = "aoc_scaffold"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
confy = "0.6.1"
edit = "0.1.5"
itertools = "0.13"
lazy_static = "1.4.0"
regex = "1.11"
serde = { version = "1.0.214", features = ["derive"] }
